trunk/OldArchive/21e17289f106198282b7473da12eb61b-a73d80d9462cfb550c0755cfd96ceec5/output
+ clang++ -std=c++1y -O3 -Wall -pthread main.cpp
main.cpp:23:36: error: use of undeclared identifier 'T'
        Action(std::function<void (T...)> func, Ts&&... args) : f(func), args(std::make_tuple(std::forward<Ts>(args)...))
                                   ^
main.cpp:23:36: error: use of undeclared identifier 'T'
2 errors generated.
